fix project name spacing

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -24,7 +24,7 @@ $header-bg-color-secondary: #00966E !default;
   }
 }
 
-h1.project_name {
+.project_name {
 
   @include large {
     margin-top: 0.5rem;
